# pdf-constructions

./: .gitignore  analyze.py  app.py  dump.py  dump_page.py  floor_plan_extract.py  floor_plan_extraction_problem.md  main.py  pyproject.toml
web/: index.html  main.js  package-lock.json  package.json  test.mjs
