[project]
name = "pdf-stats-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ijson>=3.5.0",
    "instructor>=1.15.3",
    "openpyxl>=3.1.5",
    "orjson>=3.11.9",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
]
